--- a/Form.html
+++ b/Form.html
@@ -10,16 +10,17 @@
 </head>
 <body>
     <form action="">
-        <h1 class="iitkgp">Indian Institue Of Technology, Kharagpur</h1>
+        <h1 class="iitkgp"> <img class="logo" src="kgplogo.png" alt=""> Indian Institue Of Technology, Kharagpur</h1>
         <hr>
-        <h2>Admission Form</h2>
+        <h2 class="admfrm">Admission Form</h2>
         <p class="manda">Mandatory fields are marked by asterisk *</p>
         <div class="container">
             <h3>Personal Details</h3>
             <p class="tpm">Name *: <input type="text" name="name" required placeholder="Ex: Akshay Kumar"></p>
             <p>Date of Birth *: <input type="date" name="dob" id="" required></p>
+            <p>Gender :</p>
             <fieldset>
-                <legend>Gender</legend>
+                <!-- <legend>Gender</legend> -->
                 <p>
                      <span class="gens1"><input type="radio" name="gender" id="male"> Male</span>    
                      <span class="gens2"><input type="radio" name="gender" id="female"> Female</span>
